Práctica: Position con CSS - Terminada

--- a/04-practice/practice-footer.html
+++ b/04-practice/practice-footer.html
@@ -10,7 +10,7 @@
     <footer>
         <div class="container wrapper-top">
             <div class="wrapper-top-logo">
-                <img src="" alt="logo" id="logo_img">
+                <img src="./assets-practice-footer/logo.svg" alt="logo" id="logo_img">
             </div>
             <div class="wrapper-top-nav">
                 <nav>
@@ -26,8 +26,15 @@
                 </nav>
                 <nav>
                     <h3>Contact</h3>
-                    <img src="" alt="email_icon">
-                    <img src="" alt="telephone_icon">
+                    <div class="wrapper-top-nav-contact">
+                        <img src="./assets-practice-footer/mail_outline.svg" alt="email_icon">
+                        <p>Info@example.com</p>
+                    </div>
+                    <div class="wrapper-top-nav-contact">
+                        <img src="./assets-practice-footer/add_ic_call.svg" alt="telephone_icon">
+                        <p>(270) 555-0117</p>
+                    </div>
+                    
                 </nav>
             </div>
         </div>
@@ -37,7 +44,8 @@
                 <h5>2022, All right reserved</h5>
             </div>
             <div class="wrapper-bottom-right-icons">
-                
+                <img src="./assets-practice-footer/Facebook.svg" alt="">
+                <img src="./assets-practice-footer/Instagram.svg" alt="">
             </div>
         </div>
     </footer>
